Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.0, 4.8.1, 4.8.2, 5.0.0 Beta 1
-
None
-
Ubuntu Linux.
Description
Once a drag has started, changing the value of drag.axis has no effect.
I'm attaching one example of a use-case where this results very problematic: if you have a ListView and you want to let a drag action start from them, you need to set the drag.axis orthogonal to the scrolling direction (or the list will start panning when you want to drag an item); however, as soon as the drag action is started, you can release the axis constraint and allow the item to be dragged anywhere, by setting drag.axis to Drag.XandYAxis.
But, as you can see by running the attached example, this doesn't work, and the item continues moving horizontally only.
Attachments
For Gerrit Dashboard: QTBUG-26440 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
30222,2 | MouseArea: use current value of drag.axis | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
30223,3 | MouseArea: use current value of drag.axis | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |
31543,2 | MouseArea: use current value of drag.axis | master | qt/qtquick1 | Status: MERGED | +2 | 0 |