MouseArea: use current value of drag.axis

If the drag.axis is changed while a drag operation is in progress, put
it into action immediately. This allows, for example, start a dragging
operation out of an item in a scrollable ListView to anywhere on the
screen.
See the linked bug number for an example.

Task-number: QTBUG-26440
Change-Id: I4ffa71c08b97a767aec7f69d19271000a2631327
Reviewed-by: Rick Stockton <rickstockton@reno-computerhelp.com>
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>