src/declarative/graphicsitems/qdeclarativemousearea_p_p.h
@@ -106,8 +106,6 @@ public:
     bool pressed : 1;
     bool longPress : 1;
     bool moved : 1;
-    bool dragX : 1;
-    bool dragY : 1;
     bool stealMouse : 1;
     bool doubleClick : 1;
     bool preventStealing : 1;
